Fixed Safari weird stretching.

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header {
         background-color: rgba(126, 126, 126, 0);
         background-size: 200px 200px;
     }
-    
+
     a {
         margin-right: 36px;
         font-size: calc(6px + 0.9vw);
@@ -96,22 +96,21 @@ header {
     button:hover {
         cursor: pointer;
         background-color: #4548da;
-    } 
+    }
 }
 
 #banner {
     display: flex;
-    flex: top;
 
     img {
         width: calc(100px + 40%);
-        height: max-content;
+        /*height: max-content;*/
     }
 
     #banner-text {
         margin-left: 10px;
         width: 500px;
-    
+
         h1 {
             margin-bottom: 15px;
         }
@@ -142,7 +141,7 @@ header {
     background-color: #3066be;
     display: flex;
     flex-direction: row;
-    text-align: left; 
+    text-align: left;
     padding: 12.5%;
     padding-bottom: 5% !important;
     padding-top: 5% !important;
@@ -150,6 +149,7 @@ header {
     gap: calc(60px + 1.5vw);
 
     align-items: center;
+
     h1 {
         padding: 0;
         color: #fbfff1;
@@ -163,11 +163,10 @@ header {
     div {
         width: 50%;
     }
-    
+
     img {
-        width: 50%; 
-        border-radius: 12px; 
-        height: max-content;
+        width: 50%;
+        border-radius: 12px;
     }
 
     button {
@@ -194,6 +193,7 @@ header {
     text-align: center;
     padding-bottom: 5% !important;
     padding-top: 5% !important;
+
     h1 {
         line-height: 0;
         margin-top: 50px;
@@ -211,7 +211,7 @@ header {
 
     margin-right: auto;
     margin-left: auto;
-    
+
     h1 {
         font-size: calc(15px + 1vw);
         padding: 0;
@@ -237,15 +237,16 @@ header {
         ul {
             width: 100%;
             padding: 0;
+
             li {
                 list-style: none;
                 width: 100%;
                 margin-bottom: 5px;
-            
+
                 a {
                     color: #fbfff1;
                     display: block;
-                    background-color: #3066be; 
+                    background-color: #3066be;
                     border-radius: 5px;
                     padding: 10px;
                 }
@@ -259,7 +260,7 @@ footer {
     background-color: #090c9b;
     color: #fbfff1;
     position: absolute;
-    display: flex; 
+    display: flex;
     bottom: 0px;
     font-size: calc(4px + 0.8vw);
     text-align: center;
@@ -285,9 +286,9 @@ footer {
         align-items: center;
         text-decoration: none;
         transition: background-color 0.4s;
-        box-shadow: 0 1px 5px 0 rgba(0,0,0,.2),0 2px 9px -1px rgba(0,0,0,0),0 1px 1px 0 rgba(0,0,0,.03);
+        box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .2), 0 2px 9px -1px rgba(0, 0, 0, 0), 0 1px 1px 0 rgba(0, 0, 0, .03);
 
-        
+
         img {
             width: 10%;
             padding-left: calc(0.7px + 1.3vw);
@@ -331,7 +332,7 @@ footer {
     border-radius: 6px;
     margin-top: calc(15px + 0.5vw);
 
-    
+
     img {
         height: 13px;
     }
@@ -361,7 +362,7 @@ footer {
     justify-content: space-between;
     width: 47%;
     border-radius: 5px;
-    box-shadow: 0 1px 5px 0 rgba(0,0,0,.2),0 2px 9px -1px rgba(0,0,0,0),0 1px 1px 0 rgba(0,0,0,.03);
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .2), 0 2px 9px -1px rgba(0, 0, 0, 0), 0 1px 1px 0 rgba(0, 0, 0, .03);
     overflow: hidden;
     padding: 0px 0px;
 
@@ -371,8 +372,8 @@ footer {
     }
 
     img {
-       width: 35%;
-       padding-left: 10px;
+        width: 35%;
+        padding-left: 10px;
     }
 
     h3 {
